updated code with all changes done on front end

--- a/src/app/pages/ayushman-treatment-detail/ayushman-treatment-detail.html
+++ b/src/app/pages/ayushman-treatment-detail/ayushman-treatment-detail.html
@@ -49,9 +49,27 @@
                         <p>{{ treatment.short_description }}</p>
                     </div>
                     <!-- <p><strong>Type:</strong> {{ treatment.treatment_type }}</p> -->
-                    <div class="detail-location d-flex align-items-center card-location">
+                    <!-- <div class="detail-location d-flex align-items-center card-location">
                         <img [src]="'assets/images/card-location.svg'">
                         <p class="mb-0">{{ treatment.location }}</p>
+                    </div> -->
+                    <div class="row">
+                        <div class="col-lg-5">
+                            <div class="detail-location d-flex align-items-center card-location">
+                                <img [src]="'assets/images/card-location.svg'">
+                                <p class="mb-0">{{ treatment.location }}</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-7">
+                            <div  *ngIf="hospitalName" class="detail-location d-flex align-items-center card-location">
+                                <img [src]="'assets/images/hospital.svg'">
+                                <p class="mb-0">{{ hospitalName }}</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="detail-location d-flex align-items-center card-location">
+                        <img [src]="'assets/images/designation.svg'">
+                        <p class="mb-0"><span *ngFor="let doctor of (treatment?.associated_doctors?.length ? treatment.associated_doctors : relatedDoctors)">{{doctor.name }}, &nbsp;</span></p>
                     </div>
                     <!-- <p><strong>Rating:</strong> ⭐ {{ treatment.rating }}</p> -->
                     <div class="book-package my-4">
