--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -45,7 +45,7 @@
                             been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
                             galley of type and scrambled it to make a type specimen book. It has survived not only five
                             centuries.</p>
-                        <a href="#" class="btn-default">About Us <i class="fa-solid fa-arrow-up"></i></a>
+                        <a href="/about" class="btn-default">About Us <i class="fa-solid fa-arrow-up"></i></a>
                     </div>
                 </div>
             </div>
@@ -100,7 +100,7 @@
                 <div class="col-lg-12">
                     <div class="packages-head d-flex align-items-center justify-content-between mbc-40">
                         <h2 class="mb-0">Our Packages</h2>
-                        <a href="#" class="btn-default">View All <i class="fa-solid fa-arrow-up"></i></a>
+                        <a href="/treatments" class="btn-default">View All <i class="fa-solid fa-arrow-up"></i></a>
                     </div>
                 </div>
             </div>
