--- a/src/app/shared/components/footer/footer.html
+++ b/src/app/shared/components/footer/footer.html
@@ -4,7 +4,9 @@
       <!-- About Section -->
       <div class="col-lg-4">
         <div class="footer-about pe-4">
-          <h2>LOGO</h2>
+          <div class="footer-logo mb-2">
+            <a routerLink="/"><img [src]="'assets/images/logo-white.png'" alt="Logo"></a>
+          </div>
           <p>
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
