--- a/src/app/pages/associate-hospital/associate-hospital.html
+++ b/src/app/pages/associate-hospital/associate-hospital.html
@@ -37,6 +37,8 @@
                         <div class="user-card-img">
                             <img *ngIf="h.images?.length" [src]="'http://165.22.223.163:8000' + h.images[0].url"
                                 [alt]="h.name" class="card-img-top img-fluid" />
+                            <img *ngIf="!h.images?.length" src="assets/images/our-doctors.png"
+                                [alt]="h.name" class="card-img-top img-fluid" />
                         </div>
                         <div class="user-card-content">
                             <h5 class="card-title">{{ h.name }}</h5>
