--- a/src/app/pages/attractions-detail/attractions-detail.html
+++ b/src/app/pages/attractions-detail/attractions-detail.html
@@ -25,7 +25,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-4">
-          <div class="blog-category-main">
+          <div class="blog-category-main mb-0">
             <div class="detail-doctors recent-post">
                 <div class="dtl-doctor-head d-flex align-items-center justify-content-between">
                     <h4>Recent Event</h4>
