--- a/src/app/pages/ayushman-treatment-detail/ayushman-treatment-detail.css
+++ b/src/app/pages/ayushman-treatment-detail/ayushman-treatment-detail.css
@@ -187,3 +187,15 @@
     width: 22px;
     margin-right: 15px;
 }
+.dtl-info.treatment-info .detail-location
+{
+  margin: 8px 0px;
+}
+.detail-location p
+{
+  text-transform: capitalize;
+}
+.user-card-img img
+{
+  object-position: top;
+}
