--- a/src/app/pages/doctor-details/doctor-details.html
+++ b/src/app/pages/doctor-details/doctor-details.html
@@ -463,14 +463,14 @@
 </section>
 
 <!-- Additional Images -->
-<section class="dtl-center-image ptc-60" *ngIf="doctor && doctor.images">
+<section class="dtl-center-image ptc-60" *ngIf="doctor && (doctor.images.length || 0) > 1">
     <div class="container">
         <div class="row">
-                <div class="col-lg-6 col-md-6" *ngIf="(doctor.images.length || 0) > 1">
+            <div class="col-lg-6 col-md-6" *ngIf="(doctor.images.length || 0) > 1">
                 <img [src]="(doctor.images && doctor.images.length > 1) ? (baseUrl + doctor.images[1].url) : 'assets/images/our-doctors.png'"
                     class="img-fluid w-100 rounded-4" [alt]="doctor.name || 'Doctor image'" />
             </div>
-                <div class="col-lg-6 col-md-6" *ngIf="(doctor.images.length || 0) > 2">
+            <div class="col-lg-6 col-md-6" *ngIf="(doctor.images.length || 0) > 2">
                 <img [src]="(doctor.images && doctor.images.length > 2) ? (baseUrl + doctor.images[2].url) : 'assets/images/our-doctors.png'"
                     class="img-fluid w-100 rounded-4" [alt]="doctor.name || 'Doctor image'" />
             </div>
