--- a/src/app/pages/treatment-detail/treatment-detail.css
+++ b/src/app/pages/treatment-detail/treatment-detail.css
@@ -187,3 +187,11 @@
     width: 22px;
     margin-right: 15px;
 }
+.dtl-info.treatment-info .detail-location
+{
+  margin: 8px 0px;
+}
+.detail-location p
+{
+  text-transform: capitalize;
+}
