--- a/src/app/shared/components/header/header.html
+++ b/src/app/shared/components/header/header.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white">
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/">
-      <span class="text-primary-custom">Logo</span>
+      <img [src]="'assets/images/logo.png'">
     </a>
     <div class="mob-head d-flex align-items-center">
       <div class="search-box-mob" #mobileSearchContainer>
