--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -402,6 +402,7 @@
     height: 100%;
     object-fit: cover;
     border-radius: 15px;
+    object-position: top;
 }
 
 .card-location img {
@@ -984,7 +985,7 @@
 {
     height: 100%;
     min-height: 370px;
-    max-height: 660px;
+    max-height: 650px;
     object-fit: cover;
 }
 /* responsive start */
