--- a/src/app/pages/treatments/treatments.html
+++ b/src/app/pages/treatments/treatments.html
@@ -68,7 +68,7 @@
           <div class="custom-select-wrapper">
             <div class="form-select" [class.open]="isLocationOpen" [class.placeholder]="!selectedLocation"
               (click)="toggleLocationDropdown()">
-              <span>{{ selectedLocation || 'Change Location' }}</span>
+              <span>{{ getLocationLabel(selectedLocation) || 'Change Location' }}</span>
             </div>
 
             <div class="select-dropdown" *ngIf="isLocationOpen">
@@ -76,8 +76,8 @@
                 Change Location
               </div>
               <div class="select-option" *ngFor="let loc of availableLocations"
-                [class.selected]="selectedLocation === loc" (click)="selectLocation(loc)">
-                {{ loc }}
+                [class.selected]="selectedLocation === loc.key" (click)="selectLocation(loc.key)">
+                {{ loc.label }}
               </div>
             </div>
           </div>
